examples/issues/issue_1251_g/expected/bar_networking.k8s.io_v1beta1_ingress_bar.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bar
  namespace: bar
spec:
  rules:
  - host: |-
      bar-branch
      .dev.domain.com
    http:
      paths:
      - backend:
          serviceName: bar
          servicePort: http
